# http_downloader

./: CMakeLists.txt  README.md  main.cpp
include/: FileSaver.h  HttpDownloader.h  Interfaces.h  Tcp.h  UrlParser.h  utils.h
src/: FileSaver.cpp  HttpDownloader.cpp  Tcp.cpp  UrlParser.cpp  utils.cpp
